--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
   <h1>Etch a Sketch</h1>
   <div id="container"></div>
+  <div class="buttons">
+    <button id="size">Change Size</button>
+    <button id="color">Randomize Color</button>
+    <button id="reset">Reset</button>
+  </div>
   <script src="script.js"></script>
 </body>
 
