--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="container"></div>
   <div class="buttons">
     <button id="size">Change Size</button>
-    <button id="color">Randomize Color</button>
+    <button id="color">Random: ON</button>
     <button id="reset">Reset</button>
   </div>
   <script src="script.js"></script>
